--- a/CrawlerPiguLt/CrawlerPiguLt/App.config
+++ b/CrawlerPiguLt/CrawlerPiguLt/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="CrawlerPiguLt.Properties.Settings.Setting" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Items;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
